--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -3,8 +3,10 @@
 
     <stroke
         android:width="1dp"
-        android:color="#393646" />
+        android:color="#393646"/>
 
+    <corners
+        android:radius="10dp" />
 
     <solid
         android:color="#00000000" />
