--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="register_click">#4E31AA</color>
+    <color name="header">#00235B</color>
+
+    <color name="dark_blue">#E86A33</color>
+    <color name="red">#D84C3F</color>
+    <color name="white2">#F4EEE0</color>
+
+    <color name="grey">#393646</color>
+    <color name="navy">#070A52</color>
 </resources>
