--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".userinterface.MainActivity">
 
     <ImageView
         android:id="@+id/iconLogin"
@@ -20,9 +20,10 @@
     <TextView
         android:id="@+id/tvLoginDescription"
         android:layout_width="wrap_content"
-        android:alpha="0"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:text="@string/login_description"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -36,8 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:alpha="0"
+        tools:alpha="1"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="@string/login"
+        android:text="@string/tvLogin"
         android:textColor="@color/black"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
@@ -46,9 +48,10 @@
     <com.example.submissionandroidintermediate.customview.CVEmail
         android:id="@+id/CVEmail"
         android:layout_width="0dp"
-        android:alpha="0"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:hint="@string/email"
         app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
         app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
@@ -57,9 +60,10 @@
     <com.example.submissionandroidintermediate.customview.CVPassword
         android:id="@+id/PasswordLogin"
         android:layout_width="0dp"
-        android:alpha="0"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:hint="@string/password"
         app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
         app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
@@ -68,9 +72,10 @@
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
-        android:alpha="0"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:backgroundTint="@color/black"
         android:text="@string/login_button"
         app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
@@ -82,8 +87,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:alpha="0"
         android:layout_marginEnd="32dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:text="@string/register"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/btnLogin"
@@ -95,6 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
+        tools:alpha="1"
         android:text="@string/passwordVisible"
         app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
         app:layout_constraintTop_toBottomOf="@+id/PasswordLogin" />
@@ -103,11 +110,24 @@
         android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0"
         android:layout_marginStart="4dp"
+        android:alpha="0"
+        tools:alpha="1"
         android:text="@string/register_button"
         android:textColor="@color/register_click"
         app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
         app:layout_constraintTop_toTopOf="@+id/tvRegistDescription" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/ProgressBarStyle"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/CVEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
