--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cardshape"
-    tools:context=".SplashScreenActivity">
+    tools:context=".userinterface.SplashScreenActivity">
 
     <TextView
         android:id="@+id/tvSplashScreen"
@@ -36,6 +36,7 @@
         android:id="@+id/bangkitLogo"
         android:layout_width="203dp"
         android:layout_height="89dp"
+        android:contentDescription="@string/imageSplashDesc"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/tvSplashScreen"
         app:layout_constraintStart_toStartOf="@+id/tvSplashScreen"
