--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,18 @@
 
     <color name="grey">#393646</color>
     <color name="navy">#070A52</color>
+    <color name="button">#3C486B</color>
+
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/black</item>
+    </style>
+
+    <style name="ProgressBarStyleWhite">
+        <item name="colorAccent">@color/white</item>
+    </style>
+
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 </resources>
