too lazy to make message for version control, so i'll just merge it all

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
 
     <color name="grey">#393646</color>
     <color name="navy">#070A52</color>
+
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/black</item>
+    </style>
 </resources>
