--- a/app/src/main/res/layout/activity_pick_location.xml
+++ b/app/src/main/res/layout/activity_pick_location.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        tools:text="TextView"
+        android:text="@string/pickLocation"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cardView2"
@@ -65,3 +65,5 @@
         app:layout_constraintStart_toStartOf="@+id/cardView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
