--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,8 @@
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_1000">#394867</color>
     <color name="white_500">#F1F6F9</color>
+
+    <color name="wordColor">#494242</color>
+    <color name="buttonColor">#6A7073</color>
+
 </resources>
