--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,25 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".userinterface.HomePageActivity">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/pullRefresh"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_stories"
+        style="@style/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_stories"
-            style="@style/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            tools:listitem="@layout/story_item_row" />
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        tools:listitem="@layout/story_item_row" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnFloating"
@@ -41,43 +32,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
         app:tint="@android:color/white" />
-
-    <ImageView
-        android:id="@+id/noDataFound"
-        android:layout_width="100dp"
-        android:layout_height="110dp"
-        android:visibility="gone"
-        android:contentDescription="@string/imageDataNone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/out_of_stock"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/tvNoDataFound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/noData"
-        android:textColor="#000000"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/noDataFound"
-        app:layout_constraintStart_toStartOf="@+id/noDataFound"
-        app:layout_constraintTop_toBottomOf="@+id/noDataFound"
-        tools:visibility="visible" />
-
-    <ProgressBar
-        android:id="@+id/progressBar3"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/ProgressBarStyle"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
